--- a/Study/.classpath
+++ b/Study/.classpath
@@ -2,5 +2,14 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="3p/logback-access-0.9.29-sources.jar"/>
+	<classpathentry kind="lib" path="3p/logback-access-0.9.29.jar" sourcepath="3p/logback-access-0.9.29-sources.jar"/>
+	<classpathentry kind="lib" path="3p/logback-classic-0.9.29-sources.jar"/>
+	<classpathentry kind="lib" path="3p/logback-classic-0.9.29.jar" sourcepath="3p/logback-classic-0.9.29-sources.jar"/>
+	<classpathentry kind="lib" path="3p/logback-core-0.9.29-sources.jar"/>
+	<classpathentry kind="lib" path="3p/logback-core-0.9.29.jar" sourcepath="3p/logback-core-0.9.29-sources.jar"/>
+	<classpathentry kind="lib" path="3p/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="3p/janino.jar"/>
+	<classpathentry kind="lib" path="3p/commons-compiler.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
