--- a/Study/.classpath
+++ b/Study/.classpath
@@ -11,5 +11,48 @@
 	<classpathentry kind="lib" path="3p/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="lib" path="3p/janino.jar"/>
 	<classpathentry kind="lib" path="3p/commons-compiler.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-aop-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-aop-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-aspects-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-aspects-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-beans-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-beans-4.2.5.RELEASE.jar" sourcepath="3p/spring-framework-4.2.5.RELEASE/libs/spring-beans-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-context-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-context-4.2.5.RELEASE.jar" sourcepath="3p/spring-framework-4.2.5.RELEASE/libs/spring-context-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-context-support-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-context-support-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-core-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-core-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-expression-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-expression-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-instrument-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-instrument-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-instrument-tomcat-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-instrument-tomcat-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-jdbc-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-jdbc-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-jms-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-jms-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-messaging-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-messaging-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-orm-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-orm-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-oxm-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-oxm-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-test-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-test-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-tx-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-tx-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-web-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-web-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-webmvc-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-webmvc-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-webmvc-portlet-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-webmvc-portlet-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-websocket-4.2.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="3p/spring-framework-4.2.5.RELEASE/libs/spring-websocket-4.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="3p/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="3p/c3p0-0.9.1.2.jar"/>
+	<classpathentry kind="lib" path="3p/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
